# boomer

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  dev.sh  docker-compose.yml  guide.md  project-status.md  pyproject.toml  simulate.py
.claude/: settings.json
.github/workflows/: cd.yml  ci.yml  cleanup-packages.yml
designs/: README.md  design-evolution.md  open-questions.md  phase-1-capital-and-risk.md  phase-2-collector.md  phase-3-brain.md  phase-4-executor-and-backtesting.md  phase-5-orchestrator-dashboard-ops.md
migrations/: 0001_initial_schema.sql  0002_collector_schema.sql  0003_brain_schema.sql  0004_executor_schema.sql  0005_orchestrator_schema.sql  0006_penny_stock_filters.sql
ops/: restart_guard.sh  runbook.md
ops/systemd/: boomer-dashboard.service  boomer-executor.service  boomer-orchestrator.service
scripts/: auto_login.py  fyers_login.py  get_telegram_chat_id.py  kite_login.py  run_telegram_bot.py
src/: banner.py
src/alerts/: alerter.py  email_alert.py  models.py  telegram.py  telegram_bot.py
src/backtester/: costs.py  models.py  simulation.py  slippage.py
src/brain/: entry_timing.py  feature_store.py  models.py  packager.py  portfolio.py  position_review.py  regime.py  trade_decision.py
src/capital/: circuit_breakers.py  harvest.py  models.py  pre_trade.py  risk_config.py  state.py
src/collector/: base.py  health.py  models.py  parser.py  sentiment.py
src/dashboard/: app.py  queries.py  websocket.py
src/db/: migrations.py
src/executor/: auto_login.py  gtt_manager.py  intraday.py  models.py  order_manager.py  position_manager.py  reconciliation.py
src/orchestrator/: capital_sync.py  models.py  orchestrator.py  scheduler.py  task_runner.py  tasks.py  tasks_brain.py  tasks_collector.py  tasks_executor.py  tasks_maintenance.py
tests/: test_integration_full_pipeline.py  test_phase1_phase2_integration.py
tests/alerts/: test_alerter.py
tests/backtester/: test_costs.py  test_simulation.py  test_slippage.py
tests/brain/: test_entry_timing.py  test_feature_store.py  test_models.py  test_packager.py  test_position_review.py  test_regime.py  test_trade_decision.py
tests/capital/: test_circuit_breakers.py  test_harvest.py  test_pre_trade.py  test_state.py
tests/collector/: test_base.py  test_health.py  test_models.py  test_parser.py  test_sentiment.py
tests/dashboard/: test_queries.py
(+46 files in other folders)
