[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boomer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Broker SDKs
    "kiteconnect>=5.0",
    "fyers-apiv3>=3.1",
    # Web / dashboard
    "fastapi[standard]>=0.111",   # includes uvicorn[standard], jinja2, python-multipart
    # HTTP (collector fetchers)
    "requests>=2.32",
    # Data processing (collector, brain features)
    "pandas>=2.2",
    # NLP sentiment (collector)
    "transformers>=4.40",
    "torch>=2.3",
    # Cron scheduling (orchestrator)
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short"

[tool.setuptools.packages.find]
where = ["src"]
